# Async_FastAPI_webpage_info_parser_with_minio

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: github_push_test.yml
parser/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
parser/app/: constants.py  logger.py  main.py  minio_utils.py  parser_utils.py  user_agents.txt
parser/tests/: test_web.py
tests/: test_web.py
web/: .dockerignore  Dockerfile  main.py  parser.py  pyproject.toml  requirements.txt
web/alembic/: env.py
web/alembic/versions/: 0c97f18d4aa2_create_table_websites.py
web/app/: constants.py  crud.py  db.py  errors.py  kafka_client.py  logger.py  main.py  minio_utils.py  models.py  schemas.py
web/documentation/: openapi.yaml  openapi_yaml_generator.py
