[tool.poetry]
name = "fastapi_webpage_minio_parser_in_kubernetes"
version = "0.1.0"
description = ""
authors = ["Dmitrii Chebotarev <skrubberqumo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.35"
uvicorn = "^0.17.6"
bs4 = "^0.0.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
commitizen = "^2.24.0"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
